--- a/ColorGuess.html
+++ b/ColorGuess.html
@@ -11,6 +11,8 @@
   <div id="stripe">
     <button id="reset">New Colors</button>
     <span id="message"></span>
+    <button id="easyButton">Easy</button>
+    <button class="selected" id="hardButton">Hard</button>
   </div>
 
   <div id="container">
