--- a/ColorGuess.html
+++ b/ColorGuess.html
@@ -3,10 +3,15 @@
 <head>
   <title>Color Game</title>
   <link rel="stylesheet" type="text/css" href="ColorGuess.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400" rel="stylesheet">
 </head>
 
 <body>
-  <h1>The Great <span id="colorDisplay">RGB</span> Game</h1>
+  <h1>The Great 
+  <br>
+  <span id="colorDisplay">RGB</span>
+  <br>
+  Game</h1>
 
   <div id="stripe">
     <button id="reset">New Colors</button>
